--- a/CAKE.CSS
+++ b/CAKE.CSS
@@ -1,160 +1,215 @@
 body {
-    font-family: Arial, sans-serif;
     background-color: pink;
-    margin: 0;
-    padding: 0;
 }
 
-h1 {
+.candle-count-display {
     text-align: center;
-    color: #e8e8e8;
+    margin-top: 150px;
+    margin-bottom: 20px;
+    font-family: 'Arial', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    color: #f0e4d0;
+    background-color: #ff8fab;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid #ffc2d1;
 }
 
-.instructions-container {
-    margin: 20px auto;
-    color: #d3d3d3;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.candle-count-display span {
+    font-weight: bold;
+    color: #AD030F;
 }
 
-.instructions-container p {
-    margin: 0;
-}
-
-.instructions-container button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #494949;
-    color: #acacac;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-.instructions-container button:hover {
-    background-color: #2f2f2f;
-}
-
-#instructions {
-    margin: 20px auto;
-    text-align: center;
-}
-
-#micInstructions, #cursorInstructions {
-    color: whitesmoke;
-}
-
-.birthday-cake-container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    margin-top: 500px;
-}
-
-#birthday-cake {
-width: 500px;
-    height: 300px;
-    background-color: #f5ddbe;
-    border-bottom-left-radius: 10%;
-    border-bottom-right-radius: 10%;
-    position: relative;
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    z-index: 0; 
-    top: -50px;
-}
-
-#icing {
-    width: 500px;
-    height: 100px;
-    background-color: #35a2d4;
+.cake {
     position: absolute;
-    top: 500px; 
-    border-top-right-radius: 7%;
-    border-top-left-radius: 7%;
-    z-index: 1; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    width: 250px;
+    height: 200px;
+    top: 50%;
+    left: 50%;
+    margin-top: -70px;
+    margin-left: -125px;
 }
 
-.birthday-cake-top {
-    width: 500px;
-    height: 300px;
+.plate {
+    width: 270px;
+    height: 110px;
+    position: absolute;
+    bottom: -10px;
+    left: -10px;
+    background-color: #ccc;
+    border-radius: 50%;
+    box-shadow: 0 2px 0 #b3b3b3, 0 4px 0 #b3b3b3, 0 5px 40px rgba(0, 0, 0, 0.5);
+}
+
+  .cake > * {
+    position: absolute;
+}
+
+.layer {
+    position: absolute;
+    display: block;
+    width: 250px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #ffc2d1;
+    box-shadow: 0 2px 0px #fb6f92, 0 4px 0px #ff8fab, 0 6px 0px #ff8fab, 0 8px 0px #ff8fab, 0 10px 0px #ff8fab, 0 12px 0px #ff8fab, 0 14px 0px #ff8fab, 0 16px 0px #ff8fab, 0 18px 0px #ff8fab, 0 20px 0px #ff8fab, 0 22px 0px #ff8fab, 0 24px 0px #ff8fab, 0 26px 0px #ff8fab, 0 28px 0px #ff8fab, 0 30px 0px #ff8fab;
+}
+
+.layer-top {
+    top: 0px;
+}
+
+.layer-middle {
+    top: 33px;
+}
+
+.layer-bottom {
+    top: 66px;
+}
+
+.icing {
+    top: 2px;
+    left: 5px;
+    background-color: #f0e4d0;
+    width: 240px;
+    height: 90px;
+    border-radius: 50%;
+}
+.icing:before {
+    content: "";
+    position: absolute;
+    top: 4px;
+    right: 5px;
+    bottom: 6px;
+    left: 5px;
+    background-color: #f4ebdc;
+    box-shadow: 0 0 4px #f6efe3, 0 0 4px #f6efe3, 0 0 4px #f6efe3;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.drip {
+    display: block;
+    width: 50px;
+    height: 60px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background-color: #f0e4d0;
+}
+
+.drip1 {
+    top: 53px;
+    left: 5px;
+    transform: skewY(15deg);
+    height: 48px;
+    width: 40px;
+}
+
+.drip2 {
+    top: 69px;
+    left: 181px;
+    transform: skewY(-15deg);
+}
+
+.drip3 {
+    top: 54px;
+    left: 90px;
+    width: 80px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+}
+
+.candle {
+    background-color: #7B020B;
+    width: 12px;
+    height: 35px;
+    border-radius: 6px/3px;
+    top: -20px;
+    left: 50%;
+    margin-left: -8px;
+    z-index: 10;
+}
+.candle:before {
+    content: "";
     position: absolute;
     top: 0;
-    z-index: 2;
+    left: 0;
+    width: 12px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: #ad030f;
 }
 
-.birthday-cake-top #candle {
-    background-color: #1adf58;
-    width: 50px;
-    height: 150px;
-    border-radius: 8px/2px;
-    position: absolute;
-    top: 400px;
-    left: 45.5%;
-    z-index: 3;
-    background-image:
-        radial-gradient(circle at top, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 70%);
-    background-origin: border-box;
-    background-clip: content-box, border-box;
+.candle.out .flame {
+    display: none;
 }
 
-
-
-.birthday-cake-top #flame {
+.flame {
     position: absolute;
     background-color: orange;
-    width: 30px;
-    height: 50px;
-    border-radius: 10px 10px 10px 10px / 25px 25px 10px 10px;
-    top: 350px;
-    left: 47.5%;
-    z-index: 4;
-    box-shadow:
-        0 0 10px rgba(orange, 0.5),
-        0 0 20px rgba(orange, 0.5),
-        0 0 60px rgba(orange, 0.5),
-        0 0 80px rgba(orange, 0.5);
+    width: 10px;
+    height: 25px;
+    border-radius: 8px 8px 8px 8px/20px 20px 8px 8px;
+    top: -34px;
+    left: 50%;
+    margin-left: -7.5px;
+    z-index: 10;
+    box-shadow: 0 0 10px rgba(255, 165, 0, 0.5), 0 0 20px rgba(255, 165, 0, 0.5), 0 0 60px rgba(255, 165, 0, 0.5), 0 0 80px rgba(255, 165, 0, 0.5);
     transform-origin: 50% 90%;
     animation: flicker 1s ease-in-out alternate infinite;
 }
 
 @keyframes flicker {
     0% {
-        transform: skewX(5deg);
-        box-shadow: 
-            0 0 10px rgba(orange, 0.2),
-            0 0 20px rgba(orange, 0.2),
-            0 0 60px rgba(orange, 0.2),
-            0 0 80px rgba(orange, 0.2) }
-    25% {
-        transform: skewX(-5deg);
-        box-shadow:
-            0 0 10px rgba(orange, 0.5),
-            0 0 20px rgba(orange, 0.5),
-            0 0 60px rgba(orange, 0.5),
-            0 0 80px rgba(orange, 0.5) }
-    50% {
-        transform: skewX(10deg);
-        box-shadow:
-            0 0 10px rgba(orange, 0.3),
-            0 0 20px rgba(orange, 0.3),
-            0 0 60px rgba(orange, 0.3),
-            0 0 80px rgba(orange, 0.3) }
-    75% {
-        transform: skewX(-10deg);
-        box-shadow:
-            0 0 10px rgba(orange, 0.4),
-            0 0 20px rgba(orange, 0.4),
-            0 0 60px rgba(orange, 0.4),
-            0 0 80px rgba(orange, 0.4) }
-    100% {
-        transform: skewX(5deg);
-        box-shadow:
-            0 0 10px rgba(orange, 0.5),
-            0 0 20px rgba(orange, 0.5),
-            0 0 60px rgba(orange, 0.5),
-            0 0 80px rgba(orange, 0.5) }
+    transform: skewX(5deg);
+    box-shadow: 0 0 10px rgba(255, 165, 0, 0.2), 0 0 20px rgba(255, 165, 0, 0.2), 0 0 60px rgba(255, 165, 0, 0.2), 0 0 80px rgba(255, 165, 0, 0.2);
     }
+    25% {
+    transform: skewX(-5deg);
+    box-shadow: 0 0 10px rgba(255, 165, 0, 0.5), 0 0 20px rgba(255, 165, 0, 0.5), 0 0 60px rgba(255, 165, 0, 0.5), 0 0 80px rgba(255, 165, 0, 0.5);
+    }
+    50% {
+    transform: skewX(10deg);
+    box-shadow: 0 0 10px rgba(255, 165, 0, 0.3), 0 0 20px rgba(255, 165, 0, 0.3), 0 0 60px rgba(255, 165, 0, 0.3), 0 0 80px rgba(255, 165, 0, 0.3);
+    }
+    75% {
+    transform: skewX(-10deg);
+    box-shadow: 0 0 10px rgba(255, 165, 0, 0.4), 0 0 20px rgba(255, 165, 0, 0.4), 0 0 60px rgba(255, 165, 0, 0.4), 0 0 80px rgba(255, 165, 0, 0.4);
+    }
+    100% {
+    transform: skewX(5deg);
+    box-shadow: 0 0 10px rgba(255, 165, 0, 0.5), 0 0 20px rgba(255, 165, 0, 0.5), 0 0 60px rgba(255, 165, 0, 0.5), 0 0 80px rgba(255, 165, 0, 0.5);
+    }
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #f8f9fa;
+    color: #fb6f92;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.heart {
+    animation: blink 1s linear infinite;
+    width: 16px;
+    height: 16px;
+    margin-left: 5px;
+}
+@keyframes blink {
+    0% { opacity: 0; }
+    50% { opacity: 1; }
+    100% { opacity: 0; }
+}
